# fake_news_framework

./: .gitignore  .pypirc  LICENSE  README.md  demo.ipynb  demo.py  predict.py  pyproject.toml  requirements.txt  saved_model.pkl
News/: news.csv
fakenews/: __init__.py  features.py  models.py  pipeline.py  preprocessing.py  utils.py
fakenews_framework.egg-info/: PKG-INFO  SOURCES.txt
test_framework/: test_framework.py
tests/: test_fakenews_full.py  test_fakenews_manual.py
