[project]
name = "fakenews-framework"
version = "0.1.1"
description = "A simple machine-learning framework for detecting fake news using preprocessing, feature extraction, and multiple ML models."
readme = "README.md"
authors = [
  { name = "BaByLabs" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
  "scikit-learn",
  "pandas",
  "numpy",
  "joblib",
]

[project.urls]
Homepage = "https://github.com/marshburnalexandra/fake_news_framework"
Source = "https://github.com/marshburnalexandra/fake_news_framework"
Issues = "https://github.com/marshburnalexandra/fake_news_framework/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fakenews"]
